Actions
Bug #8184
closedcpio: misleading-indentation
Start date:
2017-05-09
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Building with gcc 6:
cpio.c: In function 'sigint': cpio.c:6811:10: error: this 'if' clause does not guard... [-Werror=misleading-indentation] } else if (unlink(nam_p)) ^~ cpio.c:6814:4: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if' *Over_p = '\0'; ^ cpio.c: In function 'remove_dir': cpio.c:8158:3: error: this 'if' clause does not guard... [-Werror=misleading-indentation] if (strcmp(direct->d_name, ".") == 0 || ^~ cpio.c:8162:4: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if' if (lstat(direct->d_name, &sbuf) == -1) { ^~ cc1: all warnings being treated as errors
Updated by Electric Monk about 5 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 351716f7f1118c3aed55e44e8a210bd42db87403
commit 351716f7f1118c3aed55e44e8a210bd42db87403 Author: Toomas Soome <tsoome@me.com> Date: 2017-05-10T14:33:31.000Z 8184 cpio: misleading-indentation Reviewed by: Aurélien Larcher <aurelien.larcher@gmail.com> Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@omniti.com>
Actions