8184 cpio: misleading-indentation Reviewed by: Aurélien Larcher <aurelien.larcher@gmail.com> Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@omniti.com>